force-app/main/default/objects/Mail2XErrorMail__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HtmlBody__c</fullName>
        <label>HtmlBody</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBody__c</fullName>
        <label>TextBody</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mail2Xエラーメール</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From__c</columns>
        <columns>Name__c</columns>
        <columns>Subject__c</columns>
        <columns>TextBody__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Mail2Xエラーメール名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>